Ensure the custom background color can stretch the full height of the document.

--- a/css/sass/_reset.scss
+++ b/css/sass/_reset.scss
@@ -28,8 +28,11 @@ html {
 body,
 html {
 	height: 100%;
-	background: #fff;
+	min-height: 100%;
 	padding: 0 !important;
+}
+body {
+	background: #fff;
 }
 article,
 aside,
